welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: identifier expected but integer literal found.
	case 0 => return 10:00;
                            ^alarmClock:6: error: identifier expected but integer literal found.
	case 1 => return 7:00;
                           ^alarmClock:7: error: identifier expected but integer literal found.
	case 2 => return 7:00;
                           ^alarmClock:8: error: identifier expected but integer literal found.
	case 3 => return 7:00;
                           ^alarmClock:9: error: identifier expected but integer literal found.
	case 4 => return 7:00; 
                           ^alarmClock:10: error: identifier expected but integer literal found.
	case 5 => return 7:00; 
                           ^alarmClock:11: error: identifier expected but integer literal found.
	case 6 => return 10:00;
                            ^